# thesis

./: CMakeLists.txt  README.md  run.sh  timetracking.txt
cnf/: SAT1.cnf  SAT2.cnf  SAT3.cnf  SAT4.cnf  SAT6.cnf  SAT7.cnf  SAT8.cnf  UNSAT1.cnf  UNSAT2.cnf  UNSAT3.cnf  UNSAT5.cnf  UNSAT6.cnf  UNSAT7.cnf
src/: iterative.cpp  main.cpp
